# Fruitbox

./: .gitignore  README.md  fruitbox_ai_watch.py  fruitbox_colors.py  fruitbox_config.py  fruitbox_env.py  fruitbox_game.py  fruitbox_help.py  fruitbox_menu.py  fruitbox_pygame.py  fruitbox_settings.py  fruitbox_stats.json  fruitbox_stats.py  fruitbox_stats_screen.py  fruitbox_vs.py  pyproject.toml  requirements-build.txt  settings.json  theme_dark.json  train.py  watch.py  watch_callback.py
.github/scripts/: download_hf_model.py
.github/workflows/: build-windows.yml  deploy-web.yml
src/fruitbox/: __main__.py  ai_watch.py  menu.py
src/fruitbox.egg-info/: SOURCES.txt  top_level.txt
src/fruitbox_web/: _common.py  menu.py  play.py  vs.py  watch.py
web/: app.js  index.html  style.css
